--- a/index.html
+++ b/index.html
@@ -84,36 +84,36 @@
             <h1 class="title" style="padding-bottom:25px;"> Research Topics Include</h1>
             <div style="padding-bottom:30px;">
               <span class="number-box" style="float:left;margin-right:24px;">1</span>
-              <p>Discovery of new molecules and signaling pathways regulating cellular stress and autophagy pathways</p>
+              <p class="number-p">Discovery of new molecules and signaling pathways regulating cellular stress and autophagy pathways</p>
             </div>
             <div style="padding-bottom:30px;">
               <span class="number-box" style="float:left;margin-right:24px;">2</span>
-              <p>Investigating the links between autophagy and cancer dormancy, developing new diagnosis and
+              <p class="number-p">Investigating the links between autophagy and cancer dormancy, developing new diagnosis and
                 treatment methods against metastatic cancer</p>
             </div>
             <div style="padding-bottom:30px;">
               <span class="number-box" style="float:left;margin-right:24px;">3</span>
-              <p>Investigating the roles of small RNAs in cancer and autophagy, developing new RNA-based diagnosis
+              <p class="number-p">Investigating the roles of small RNAs in cancer and autophagy, developing new RNA-based diagnosis
                 and treatment methods against cancer.</p>
             </div>
             <div style="padding-bottom:30px;">
               <span class="number-box" style="float:left;margin-right:24px;">4</span>
-              <p>Developing new biochip-based disease diagnosis and follow-up methods in the light of original
+              <p class="number-p">Developing new biochip-based disease diagnosis and follow-up methods in the light of original
                 discoveries</p>
             </div>
             <div style="padding-bottom:30px;">
               <span class="number-box" style="float:left;margin-right:24px;">5</span>
-              <p>Revealing the role of autophagy in cancer stem cells and cancer-stroma relationship, using the
+              <p class="number-p">Revealing the role of autophagy in cancer stem cells and cancer-stroma relationship, using the
                 inventions for diagnosis and treatment</p>
             </div>
             <div style="padding-bottom:30px;">
               <span class="number-box" style="float:left;margin-right:24px;">6</span>
-              <p>Investigating the role of autophagy in immune responses against tumors, developing new immuno-
+              <p class="number-p">Investigating the role of autophagy in immune responses against tumors, developing new immuno-
                 therapeutics</p>
             </div>
             <div style="padding-bottom:30px;">
               <span class="number-box" style="float:left;margin-right:24px;">7</span>
-              <p>Development of specific and targeted small molecule, antibodies and nanotechnological drugs against
+              <p class="number-p">Development of specific and targeted small molecule, antibodies and nanotechnological drugs against
                 cancer and neurodegenerative diseases.</p>
             </div>
           </div>
