--- a/gallery.html
+++ b/gallery.html
@@ -12,32 +12,41 @@
   <title>Devrim Gözüaçık</title>
 </head>
 <section>
-  <navbar>
-    <div class="text-center"><a href="/"><img src="images/logo.png" width="184" height="119"></a></div>
-    <ul class="nav justify-content-center">
-      <li class="nav-item">
-        <a class="nav-link" href="biography.html">Biography</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="publications.html">Publications</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="news.html">News</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="intived.html">Invited Talks</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="team.html">Team</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="gallery.html">Gallery</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
-      </li>
-    </ul>
-</section>
+    <div class="row justify-content-center pt-4  w-100 mobile-img">
+      <a href="/"><img src="images/logo.png" width="184" height="119"></a>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-light  py-3">
+      <a href="/" class="navbar-brand font-weight-bold d-block d-lg-none"><img src="images/logo.png" width="184" height="119"></a>
+      <button type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+      <div id="navbarContent" class="collapse navbar-collapse">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item">
+            <a class="nav-linkk" href="biography.html">Biography</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-linkk" href="publications.html">Publications</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-linkk" href="news.html">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-linkk" href="intived.html">Invited Talks</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-linkk" href="team.html">Team</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-linkk" href="gallery.html">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-linkk" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </section>
 
 <body>
   <body>
