--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
   <section>
     <div class="row justify-content-center pt-4  w-100 mobile-img">
-      <img src="images/logo.png" width="184" height="119">
+      <a href="/"><img src="images/logo.png" width="184" height="119"></a>
     </div>
     <nav class="navbar navbar-expand-lg navbar-light  py-3">
-      <a href="#" class="navbar-brand font-weight-bold d-block d-lg-none"><img src="images/logo.png" width="184" height="119"></a>
+      <a href="/" class="navbar-brand font-weight-bold d-block d-lg-none"><img src="images/logo.png" width="184" height="119"></a>
       <button type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
               <span class="navbar-toggler-icon"></span>
           </button>
@@ -49,37 +49,6 @@
       </div>
     </nav>
   </section>
-   <!-- <section>
-    <navbar>
-      <div class="text-center">
-        <a href="/">
-          <img src="images/logo.png" width="184" height="119">
-        </a>
-      </div>
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link" href="biography.html">Biography</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="publications.html">Publications</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="news.html">News</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="intived.html">Invited Talks</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="team.html">Team</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="gallery.html">Gallery</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-      </ul>
-  </section> -->
   <body class="bg-white">
     <section class="bottom-space" id="one-section">
       <div class="container">
