--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,8 @@
     <div class="row">
       <div class="col-md-8 mx-auto pt-4">
         <p class="desc">
-          Diam nunc convallis platea proin vitae sed ut arcu cras posuere fringilla ornare vitae non vestibulum donec gravida ultricies volutpat elementum pharetra arcu, quisque felis in id leo aenean risus, in egestas libero, quis non justo pulvinar tincidunt nam velit vitae urna rhoncus morbi sed proin viverra dignissim integer mauris quam molestie eget arcu, convallis dui
+          If you are interested to join our team or get to know more details, please do not hesitate to contact us. 
+
         </p>
         <form>
           <div class="form-group">
