--- a/team.html
+++ b/team.html
@@ -53,7 +53,8 @@
     <div class="row col-md-12">
       <h1 class="team-title pt-3">Team</h1>
       <span class="desc">
-        Dictum pharetra nec porttitor sapien, commodo nulla scelerisque nulla tellus quam semper ac, iaculis ipsum sit curabitur dictumst amet, interdum dolor nisl dictum facilisi convallis id volutpat.
+        Our team comprises dedicated and self-motivated experts and students from high-ranked colleges with different backgrounds including Molecular Biology, Genetics, Biotechnology, and Medicine. 
+
       </span>
     </div>
   </div>
