--- a/biography.html
+++ b/biography.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
   <title>Devrim Gözüaçık</title>
 </head>
@@ -59,16 +60,16 @@
 <section class="bg-gray">
   <div class="container">
     <div class="row">
-      <div class="col-6 mb-5 mt-5 pt-5 pb-5">
+      <div class="col-md-6 col-xs-12 mt-5 pt-5">
         <img src="images/devrim-gozuacik.png" width="350" height="100%">
       </div>
-      <div class="col mb-5 mt-5 pt-5 pb-5">
+      <div class="col-md-3 col-xs-12 mt-md-5 pt-5">
        <h5 class="title-gray">Research Team<br>Leader</h5>
         <p class="about-p">
           SUNUM Nanotechnology Research and Application Center.<img src="images/up-link.png">
         </p>
       </div>
-      <div class="col mb-5 mt-5 pt-5 pb-5">
+      <div class="col-md-3 col-xs-12 mt-md-5 pt-5">
         <h5 class="title-gray">International Council<br>
         Member and Affiliate Member</h5>
         <p class="about-p">
@@ -76,6 +77,23 @@
         </p>
       </div>
     </div>
+    <div class="row justify-content-end">
+      <div class="col-md-3 col-xs-12 mb-md-5 mt-5 mt-md-0">
+       <h5 class="title-gray">Board of Directors
+        <br>Member</h5>
+        <p class="about-p">
+          International Cell Death Society, USA.<img src="images/up-link.png">
+        </p>
+      </div>
+      <div class="col-md-3 col-xs-12 mb-md-5 mt-5 mt-md-0">
+        <h5 class="title-gray">Associate<br>
+          Editor</h5>
+        <p class="about-p">
+          Autophagy journal (SCI Impact Factor 2018: 11.10)<img src="images/up-link.png">
+        </p>
+      </div>
+    </div> 
+       
   </div>
 </section>
 <section>
@@ -119,6 +137,12 @@
   padding: 6px 12px;
   border: 1px solid #ccc;
   border-top: none;
+}
+
+@media screen and (max-width: 970px) {
+  .tabcontent {
+    margin-top: 15%;
+  }
 }
 
   </style>
