--- a/intived.html
+++ b/intived.html
@@ -60,47 +60,67 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <div style="padding-bottom:30px;">
-          <span class="number-box" style="float:left;margin-right:24px;">1</span>
-          <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+        <div class="row" style="padding-bottom:30px;">
+          <div class="col-md-12">
+            <span class="number-box" style="float:left;margin-right:24px;">1</span>
+            <p class="invited">Annual Meeting and Symposium of the Autophagy, Inflammation, and Metabolism Center of Biomedical Research Excellence, 22 February, 2019, Albuquerque, New Mexico, USA.  </p>
+          </div>
         </div>
-        <div style="padding-bottom:30px;">
-          <span class="number-box" style="float:left;margin-right:24px;">3</span>
-          <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+        <div class="row" style="padding-bottom:30px;">
+          <div class="col-md-12">
+            <span class="number-box" style="float:left;margin-right:24px;">3</span>
+            <p class="invited">Keystone Conference on Autophagy: From Model Systems to Therapeutic Opportunities.17—21 February, 2019, Santa Fe, New Mexico, USA.</p>
+          </div>
         </div>
-        <div style="padding-bottom:30px;">
-          <span class="number-box" style="float:left;margin-right:24px;">5</span>
-          <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+        <div class="row" style="padding-bottom:30px;">
+          <div class="col-md-12">
+            <span class="number-box" style="float:left;margin-right:24px;">5</span>
+            <p class="invited">European Federation For Pharmaceutical Sciences Annual Meeting, 24-26 May, 2018, Athens, Greece.</p>
+          </div>
         </div>
-        <div style="padding-bottom:30px;">
-          <span class="number-box" style="float:left;margin-right:24px;">7</span>
-          <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+        <div class="row" style="padding-bottom:30px;">
+          <div class="col-md-12">
+            <span class="number-box" style="float:left;margin-right:24px;">7</span>
+            <p class="invited">HEMBO Young Scientist Forum, 5-6 January, Istanbul, Turkey.</p>
+          </div>
         </div>
-        <div style="padding-bottom:30px;">
-          <span class="number-box" style="float:left;margin-right:24px;">9</span>
-          <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+        <div class="row" style="padding-bottom:30px;">
+          <div class="col-md-12">
+            <span class="number-box" style="float:left;margin-right:24px;">9</span>
+            <p class="invited"> International Cell Death Society (ICDS) Conference on: “Cell Death in Development and Disease”. 18-20 June, 2017, Weizmann Institute of Science, Rehovot, Israel.</p>
+          </div>
         </div>
       </div>
       <div class="col-md-6">
-        <div style="padding-bottom:30px;">
-          <span class="number-box" style="float:left;margin-right:24px;">2</span>
-          <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+        <div class="row" style="padding-bottom:30px;">
+          <div class="col-md-12">
+            <span class="number-box" style="float:left;margin-right:24px;">2</span>
+            <p class="invited">Transautophagy Meeting. 6-7 October, 2016, Warsaw, Poland.</p>
+          </div>
         </div>
-        <div style="padding-bottom:30px;">
-          <span class="number-box" style="float:left;margin-right:24px;">4</span>
-          <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+        <div class="row" style="padding-bottom:30px;">
+          <div class="col-md-12">
+            <span class="number-box" style="float:left;margin-right:24px;">4</span>
+          <p class="invited">EMBO (European Molecular Biology Organization)-Cancer Sectoral Meeting. 2-4 September 2015, Prague, Czech Republic.</p>
+          </div>
         </div>
-        <div style="padding-bottom:30px;">
-          <span class="number-box" style="float:left;margin-right:24px;">6</span>
-          <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+        <div class="row" style="padding-bottom:30px;">
+          <div class="col-md-12">
+            <span class="number-box" style="float:left;margin-right:24px;">6</span>
+            <p class="invited">    International Cell Death Society (ICDS) Conference on: “Cell Death and its Translational Ramification, 2-5 June, 2016, Cork, Ireland.</p>
+          </div>
         </div>
-        <div style="padding-bottom:30px;">
-          <span class="number-box" style="float:left;margin-right:24px;">8</span>
-          <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+        <div class="row" style="padding-bottom:30px;">
+          <div class="col-md-12">
+            <span class="number-box" style="float:left;margin-right:24px;">8</span>
+            <p class="invited"> Healthy Minor Cereals Meeting. 10-11 May 2016, Berlin, Germany.</p>
+          </div>
         </div>
-        <div style="padding-bottom:30px;">
-          <span class="number-box" style="float:left;margin-right:24px;">10</span>
-          <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+        <div class="row" style="padding-bottom:30px;">
+          <div class="col-md-12">
+            <span class="number-box" style="float:left;margin-right:24px;">10</span>
+            <p class="invited">Black Forest Winter Conference on Autophagic Membrane Trafficking and Dynamics in Ageing and Disease, 29-31 January 2016, Freiburg, Germany.</p>
+          </div>
         </div>
       </div>
     </div>
